# NumDif

./: #.gitignore#  .gitignore  04_pendulum.cpp  05_pendulum.cpp  08_circuit.cpp  14_circuit.cpp  18_chemie.cpp  20_stability.mw  26_pen_h_allg.cpp  26_pen_h_sep.cpp  32_pen_dae.cpp  35_stability.mw  41_heateqn.cpp  43_monom.cpp  46_parabolic_pde.py  Bsp14_circuit.cpp  Bsp7_circuit.cpp  CMakeLists.txt  ChemicalReaction.txt  DifUe.cpp  Implicit_euler.cpp  README  README.md  RK_orig.hpp  bsp26.cpp  chemicalreactions.cpp  chemicalreactions.py  collocation.hpp  demo_Newton.cpp  demo_bla.cpp  diode.cpp  hamilton.hpp  hamilton_orig.hpp  hamiltonian.hpp  heateqn.cpp  monom.sh  monombasis.cpp  ode.hpp  ode_BACKUP_796.hpp  ode_LOCAL_796.hpp  (+17 more)
Tests/: CMakeLists.txt  Factorial.cpp  LotkaVolterra.cpp
bla/: CMakeLists.txt  archive_base.hpp  array.hpp  autodiff.hpp  bitarray.hpp  bla.hpp  calcinverse.cpp  exception.cpp  exception.hpp  expr.hpp  localheap.cpp  localheap.hpp  matrix.hpp  ng_lapack.hpp  ngs_stdcpp_include.hpp  ngstd.hpp  templates.hpp  tuple.hpp  vector.hpp
lgs_solver/: cg_verfahren.py  gauss_seidel.py  gradientenmethon.py  jacobi.py  multigrid.py
plot/: #heatplot.py#  13_diode.py  14_circuit.py  18_chemie.py  22_satelit.py  26_pen_h_allg.py  43_monom.py  bsp26.py  chebyshev.py  heatplot.py  plot.py
rattle/: #pendulum_DAE.cpp#  CMakeLists.txt  dualpendulum_DAE.cpp  pendulum_DAE.cpp  rattle.cpp  rattle.hpp
windows/: DAE.sln  bla.vcxproj  bla.vcxproj.filters  demo_bla.vcxproj  demo_bla.vcxproj.filters  ode_code.sln  ode_code.vcxproj  ode_code.vcxproj.filters
windows/GL/Win32/: freeglut.lib  freeglutd.lib
windows/GL/x64/: freeglut.lib  freeglutd.lib
windows/bla/: bla.vcxproj  bla.vcxproj.filters
windows/rattle/: rattle.vcxproj  rattle.vcxproj.filters
